Refactoring row descriptors:
* ColumnDescriptor: ExtendedType type property
* Getting rid of RowDescriptor ... ColumnDescriptor[] now gives us a full row
* Inline RowDescriptorBuilder into ColumnDescriptor